fix alignment of checkboxes in nonmed section

--- a/static/adfice.css
+++ b/static/adfice.css
@@ -160,8 +160,9 @@ th,td.patient_data_td {
 	width: 100%;
 }
 .nonmed_row{
-	margin-bottom: 10px;
+	display: flex;
 	position: relative;
+	height: auto;
 }
 .td_nm_category_name{
 	display:inline-block;
@@ -169,7 +170,6 @@ th,td.patient_data_td {
 }
 .nonmed_checkbox{
 	display: inline;
-	position: absolute;
 	top: 0%;
 }
 .nonmed_cdss_container{
@@ -179,7 +179,7 @@ th,td.patient_data_td {
 }
 .nonmed_cdss{
   display: block;
-  width: 100%;
+  margin-bottom: 10px;
 }
 .freetext {
     display: inline-block;
@@ -359,7 +359,8 @@ div.gauge_background {
     width:60%;
     height: 0px;
     padding-bottom: 4%;
-    /* The bar will transition from green (very low risk; 0-15%) to yellow (medium risk; 15-30%) to orange (elevated risk; 30-50%) to red (high risk; 50-60%) to deep red (very high risk; ≥60%).*/    background: linear-gradient(to right, #0F0 5%, #FF0 15%, #F70 35%, #F00 55%, #800 65%);
+    /* The bar will transition from green (very low risk; 0-15%) to yellow (medium risk; 15-30%) to orange (elevated risk; 30-50%) to red (high risk; 50-60%) to deep red (very high risk; ≥60%).*/
+    background: linear-gradient(to right, #0F0 5%, #FF0 15%, #F70 35%, #F00 55%, #800 65%);
     display: inline-block;
 	border: 2px solid #000000;
     margin-bottom: 3ex;
@@ -386,12 +387,16 @@ div.gauge_text_left {
     padding: 0px;
     width: 0px;
     display: inline-block;
-}/* Text labels: ‘laag’ close to the left side of the bar, ‘verhoogd’ at about 25%, and zeer hoog at around 50% */div.gauge_text_middle {
+}
+
+/* Text labels: ‘laag’ close to the left side of the bar, ‘verhoogd’ at about 25%, and zeer hoog at around 50% */
+div.gauge_text_middle {
     position: relative;
     top: 10px;
     margin: 0px;
     padding: 0px;
-    width: 0px;    left: calc(25% - 4ch - 1em);
+    width: 0px;
+    left: calc(25% - 4ch - 1em);
     display: inline-block;
 }
 
